display current dice roll on screen

--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
       <div class="row">
         <div class="col-md-8">
           <h2>Its <span id="playerId"></span> turn to roll</h2>
-          <span id="diceId"></span>
-          <span class="btn btn-primary" id="hit">Hit!</span>
-          <span class="btn btn-primary" id="hold">Hold!</span>
-          <span id="turnScore"></span>
         </div>
         <div class="col-md-4">
           <span id="totalScore1"></span>
           <span id="totalScore2"></span>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <span id="diceId"></span><br>
+          <span class="btn btn-primary" id="hit">Hit!</span>
+          <span class="btn btn-primary" id="hold">Hold!</span>
+          <span id="turnScore"></span>
+        </div>
+      </div>
       </div>
     </div>
   </body>
