change players turnscore to 0 if dice roll is 1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <h2>Its <span id="playerId"></span> turn to roll</h2>
+          <h2>It's <span id="playerId"></span>'s turn to roll</h2>
         </div>
         <div class="col-md-4">
           <span id="totalScore1"></span>
@@ -23,10 +23,10 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <span id="diceId"></span><br>
+          <h3>You rolled: <span id="diceId"></span><br></h3>
           <span class="btn btn-primary" id="hit">Hit!</span>
-          <span class="btn btn-primary" id="hold">Hold!</span>
-          <span id="turnScore"></span>
+          <span class="btn btn-primary" id="hold">Hold!</span><br>
+          <h3>Your turn for this score: <span id="turnScore"></span></h3>
         </div>
       </div>
       </div>
