--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <h2>It's <span id="playerId"></span>'s turn to roll</h2>
         </div>
         <div class="col-md-4">
-          <span id="totalScore1"></span>
-          <span id="totalScore2"></span>
+          <h2>Player 1 Score: <span id="totalScore1"></span></h2>
+          <h2>Player 2 Score: <span id="totalScore2"></span></h2>
         </div>
       </div>
       <div class="row">
@@ -26,7 +26,7 @@
           <h3>You rolled: <span id="diceId"></span><br></h3>
           <span class="btn btn-primary" id="hit">Hit!</span>
           <span class="btn btn-primary" id="hold">Hold!</span><br>
-          <h3>Your turn for this score: <span id="turnScore"></span></h3>
+          <h3>Your score for this turn: <span id="turnScore"></span></h3>
         </div>
       </div>
       </div>
