--- a/index.html
+++ b/index.html
@@ -12,23 +12,40 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <div class="col-md-8">
-          <h2>It's <span id="playerId"></span>'s turn to roll</h2>
+      <h1>Pig Dice Game!</h1>
+      <div class="row" id="row1">
+        <div id="your-turn" class="col-md-4 col-styles" align="center">
+          <h2>It's <span id="playerId"></span>'s turn</h2>
+          <h3>Your score for this turn: <span id="turnScore"></span></h3>
         </div>
-        <div class="col-md-4">
+        <div id="you-rolled" class="col-md-4 col-styles" align="center">
+          <h3>You rolled: <span id="diceId"></span><br></h3>
+          <div id="dice-pic">
+            <img src="img/none.png" alt="" id="diceImage">
+          </div>
+          <span class="btn btn-primary" id="hit">Hit!</span>
+          <span class="btn btn-primary" id="hold">Hold!</span>
+        </div>
+        <div id="total-scores"class="col-md-4 col-styles" align="center">
           <h2>Player 1 Score: <span id="totalScore1"></span></h2>
           <h2>Player 2 Score: <span id="totalScore2"></span></h2>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <h3>You rolled: <span id="diceId"></span><br></h3>
-          <span class="btn btn-primary" id="hit">Hit!</span>
-          <span class="btn btn-primary" id="hold">Hold!</span><br>
-          <h3>Your score for this turn: <span id="turnScore"></span></h3>
+      <div class="row" id="row2">
+        <div class="col-md-2">
         </div>
-      </div>
+        <div class="col-md-8 col-styles" id="rules">
+          <h2>Rules</h2>
+          <p>Each turn, a player repeatedly rolls a die until either a 1 is rolled or the player decides to "hold":</p>
+          <ul>
+            <li>If the player rolls a 1, they score nothing and it becomes the next player's turn.</li>
+            <li>If the player rolls any other number, it is added to their turn total and the player's turn continues.</li>
+            <li>If a player chooses to "hold", their turn total is added to their score, and it becomes the next player's turn.</li>
+          </ul>
+          <p>The first player to score 100 or more points wins.</p>
+        </div>
+        <div class="col-md-2">
+        </div>
       </div>
     </div>
   </body>
