add second die image

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
           <h3>Your score for this turn: <span id="turnScore"></span></h3>
         </div>
         <div id="you-rolled" class="col-md-4 col-styles" align="center">
-          <h3>You rolled: <span id="diceId"></span><br></h3>
-          <div id="dice-pic">
-            <img src="img/none.png" alt="" id="diceImage">
-          </div>
+          <img src="img/none.png" alt="" id="diceImage">
+          <img src="img/none.png" alt="" id="diceImage2" /><br>
+
           <span class="btn btn-primary" id="hit">Hit!</span>
           <span class="btn btn-primary" id="hold">Hold!</span>
         </div>
